<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- actionViewClass : make search-optionsMenu into expandable searchView
     collapseActionView: collapse expanded searchView into search icon. -->
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <!-- Creating a menu containing a sub-menu. -->
    <item
        android:icon="@drawable/ic_sort"
        android:title="@string/sort"
        app:showAsAction="always">

        <!-- Sub-Menu here: Note: sub-menu must have menu-ids, for referencing in code e.g handle clickEvents -->
        <menu>
            <item
                android:id="@+id/action_sort_by_name"
                android:title="@string/sort_by_name" />

            <item
                android:id="@+id/action_sort_by_date_created"
                android:title="@string/sort_by_date_created" />
        </menu>
    </item>

    <!-- Hide completed menu-Item -->
    <item
        android:id="@+id/action_hide_completed_tasks"
        android:checkable="true"
        android:title="@string/hide_completed"
        app:showAsAction="never" />

    <!-- Delete all completed tasks  -->
    <item
        android:id="@+id/action_delete_all_completed_tasks"
        android:title="@string/delete_all_completed"
        app:showAsAction="never" />


</menu>